vpc/vpc-4azs-4prg.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "VPC: public and private subnets in four availability zones",
	"Parameters": {
		"ClassB": {
			"Description": "Class B of VPC (10.XXX.0.0/16)",
			"Type": "String",
			"MinLength": "1",
			"MaxLength": "3"
		},
		"VPCName": {
			"Description": "Short name of the new VPC",
			"Type": "String",
			"MinLength": "1",
			"MaxLength": "32"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/16"]]},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"InstanceTenancy": "default",
				"Tags": [{
					"Key": "Name",
					"Value": {"Ref": "VPCName"}
				}]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/16"]]}
				}]
			}
		},
		"VPCGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"InternetGatewayId": {"Ref": "InternetGateway"}
			}
		},
		"SubnetAPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " A public"]]}
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetAPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".64.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " A private"]]}
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"SubnetBPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".16.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " B public"]]}
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetBPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".80.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " B private"]]}
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"SubnetDPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["2", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".32.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " D public"]]}
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetDPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["2", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".96.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " D private"]]}
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"SubnetEPublic": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["3", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".48.0/20"]]},
				"MapPublicIpOnLaunch": true,
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " E public"]]}
				}, {
					"Key": "Reach",
					"Value": "public"
				}]
			}
		},
		"SubnetEPrivate": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {"Fn::Select": ["3", {"Fn::GetAZs": ""}]},
				"CidrBlock": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".112.0/20"]]},
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " E private"]]}
				}, {
					"Key": "Reach",
					"Value": "private"
				}]
			}
		},
		"RouteTablePublic": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " public"]]}
				}]
			}
		},
		"RouteTableAPrivate": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " A private"]]}
				}]
			}
		},
		"RouteTableBPrivate": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " B private"]]}
				}]
			}
		},
		"RouteTableDPrivate": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " D private"]]}
				}]
			}
		},
		"RouteTableEPrivate": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " E private"]]}
				}]
			}
		},
		"RouteTableAssociationAPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationAPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPrivate"},
				"RouteTableId": {"Ref": "RouteTableAPrivate"}
			}
		},
		"RouteTableAssociationBPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationBPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPrivate"},
				"RouteTableId": {"Ref": "RouteTableBPrivate"}
			}
		},
		"RouteTableAssociationDPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationDPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPrivate"},
				"RouteTableId": {"Ref": "RouteTableDPrivate"}
			}
		},
		"RouteTableAssociationEPublic": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetEPublic"},
				"RouteTableId": {"Ref": "RouteTablePublic"}
			}
		},
		"RouteTableAssociationEPrivate": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetEPrivate"},
				"RouteTableId": {"Ref": "RouteTableEPrivate"}
			}
		},
		"RouteTablePublicInternetRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "VPCGatewayAttachment",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTablePublic"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {"Ref": "InternetGateway"}
			}
		},
		"NetworkAclPublic": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " public"]]}
				}]
			}
		},
		"NetworkAclPrivate": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", [{"Ref": "VPCName"}, " private"]]}
				}]
			}
		},
		"SubnetNetworkAclAssociationAPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationAPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetAPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"SubnetNetworkAclAssociationBPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationBPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetBPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"SubnetNetworkAclAssociationDPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationDPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetDPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"SubnetNetworkAclAssociationEPublic": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetEPublic"},
				"NetworkAclId": {"Ref": "NetworkAclPublic"}
			}
		},
		"SubnetNetworkAclAssociationEPrivate": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {"Ref": "SubnetEPrivate"},
				"NetworkAclId": {"Ref": "NetworkAclPrivate"}
			}
		},
		"NetworkAclEntryInPublicAllowAll": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPublic"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"NetworkAclEntryOutPublicAllowAll": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPublic"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"NetworkAclEntryInPrivateAllowVPC": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPrivate"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"NetworkAclEntryOutPrivateAllowVPC": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {"Ref": "NetworkAclPrivate"},
				"RuleNumber": "99",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0"
			}
		},
		"EIP": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NatGatewayA": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": ["EIP", "AllocationId"]},
				"SubnetId": {"Ref": "SubnetAPublic"}
			}
		},
		"NatGatewayB": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": ["EIP", "AllocationId"]},
				"SubnetId": {"Ref": "SubnetBPublic"}
			}
		},
		"NatGatewayD": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": ["EIP", "AllocationId"]},
				"SubnetId": {"Ref": "SubnetDPublic"}
			}
		},
		"NatGatewayE": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": ["EIP", "AllocationId"]},
				"SubnetId": {"Ref": "SubnetEPublic"}
			}
		},
		"RouteTablePrivateANatRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTableAPrivate"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGatewayA"}
			}
		},
		"RouteTablePrivateBNatRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTableBPrivate"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGatewayB"}
			}
		},
		"RouteTablePrivateDNatRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTableDPrivate"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGatewayD"}
			}
		},
		"RouteTablePrivateENatRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {"Ref": "RouteTableEPrivate"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGatewayE"}
			}
		}
	},
	"Outputs": {
		"VPC": {
			"Description": "VPC",
			"Value": {"Ref": "VPC"}
		},
		"SubnetAPublic": {
			"Description": "Subnet A public",
			"Value": {"Ref": "SubnetAPublic"}
		},
		"SubnetAPrivate": {
			"Description": "Subnet A private",
			"Value": {"Ref": "SubnetAPrivate"}
		},
		"SubnetBPublic": {
			"Description": "Subnet B public",
			"Value": {"Ref": "SubnetBPublic"}
		},
		"SubnetBPrivate": {
			"Description": "Subnet B private",
			"Value": {"Ref": "SubnetBPrivate"}
		},
		"SubnetDPublic": {
			"Description": "Subnet D public",
			"Value": {"Ref": "SubnetDPublic"}
		},
		"SubnetDPrivate": {
			"Description": "Subnet D private",
			"Value": {"Ref": "SubnetDPrivate"}
		},
		"SubnetEPublic": {
			"Description": "Subnet E public",
			"Value": {"Ref": "SubnetEPublic"}
		},
		"SubnetEPrivate": {
			"Description": "Subnet E private",
			"Value": {"Ref": "SubnetEPrivate"}
		},
		"RouteTablePublic": {
			"Description": "Route table public",
			"Value": {"Ref": "RouteTablePublic"}
		},
		"RouteTableAPrivate": {
			"Description": "Route table A private",
			"Value": {"Ref": "RouteTableAPrivate"}
		},
		"RouteTableBPrivate": {
			"Description": "Route table private",
			"Value": {"Ref": "RouteTableBPrivate"}
		},
		"RouteTableDPrivate": {
			"Description": "Route table Dprivate",
			"Value": {"Ref": "RouteTableDPrivate"}
		},
		"RouteTableEPrivate": {
			"Description": "Route table E private",
			"Value": {"Ref": "RouteTableEPrivate"}
		}
	}
}
