vpc/vpc-nat-instance.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "VPC: highly available NAT instance for private subnets, a cloudonaut.io template",
	"Parameters": {
		"VPC": {
			"Description": "Use VPC output from vpc stack.",
			"Type": "AWS::EC2::VPC::Id"
		},
		"PublicSubnets": {
			"Description": "Use SubnetAPublic, SubnetBPublic, [SubnetCPublic] output from vpc stack.",
			"Type": "List<AWS::EC2::Subnet::Id>"
		},
		"ClassB": {
			"Description": "Class B of VPC (10.XXX.0.0/16)",
			"Type": "String",
			"MinLength": "1",
			"MaxLength": "3"
		},
		"RouteTablePrivate": {
			"Description": "Use RouteTablePrivate output from vpc stack.",
			"Type": "String"
		},
		"NATInstanceType": {
			"Type": "String",
			"Default": "t2.micro",
			"Description": "Instance type of the NAT instance. Keep in mind that different instances come with different network capabilities."
		}
	},
	"Mappings" : {
		"RegionMap" : {
			"eu-west-1": {"NATAMI": "ami-c0993ab3"},
			"ap-southeast-1": {"NATAMI": "ami-e2fc3f81"},
			"ap-southeast-2": {"NATAMI": "ami-e3217a80"},
			"eu-central-1": {"NATAMI": "ami-0b322e67"},
			"ap-northeast-2": {"NATAMI": "ami-4118d72f"},
			"ap-northeast-1": {"NATAMI": "ami-f885ae96"},
			"us-east-1": {"NATAMI": "ami-68115b02"},
			"sa-east-1": {"NATAMI": "ami-8631b5ea"},
			"us-west-1": {"NATAMI": "ami-ef1a718f"},
			"us-west-2": {"NATAMI": "ami-77a4b816"}
		}
	},
	"Resources": {
		"EIP": {
			"Type": "AWS::EC2::EIP",
			"Properties": {}
		},
		"NATSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "NAT",
				"Tags": [],
				"VpcId": {"Ref": "VPC"}
			}
		},
		"NATSecurityGroupOutHTTP": {
			"Type": "AWS::EC2::SecurityGroupEgress",
			"Properties":{
				"IpProtocol": "tcp",
				"FromPort": "80",
				"ToPort": "80",
				"CidrIp": "0.0.0.0/0",
				"GroupId": {"Ref": "NATSecurityGroup"}
			}
		},
		"NATSecurityGroupOutHTTPS": {
			"Type": "AWS::EC2::SecurityGroupEgress",
			"Properties":{
				"IpProtocol": "tcp",
				"FromPort": "443",
				"ToPort": "443",
				"CidrIp": "0.0.0.0/0",
				"GroupId": {"Ref": "NATSecurityGroup"}
			}
		},
		"NATSecurityGroupOutNTP": {
			"Type": "AWS::EC2::SecurityGroupEgress",
			"Properties":{
				"IpProtocol": "udp",
				"FromPort": "123",
				"ToPort": "123",
				"CidrIp": "0.0.0.0/0",
				"GroupId": {"Ref": "NATSecurityGroup"}
			}
		},
		"NATSecurityGroupInVPC": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties":{
				"IpProtocol": "tcp",
				"FromPort": "80",
				"ToPort": "80",
				"CidrIp": {"Fn::Join": ["", ["10.", {"Ref": "ClassB"}, ".0.0/16"]]},
				"GroupId": {"Ref": "NATSecurityGroup"}
			}
		},
		"NATInstanceProfile": {
			"Type": "AWS::IAM::InstanceProfile",
			"Properties": {
				"Path": "/",
				"Roles": [{"Ref": "NATIAMRole"}]
			}
		},
		"NATIAMRole": {
			"Type": "AWS::IAM::Role",
			"Properties": {
				"AssumeRolePolicyDocument": {
					"Version": "2012-10-17",
					"Statement": [{
						"Effect": "Allow",
						"Principal": {
							"Service": ["ec2.amazonaws.com"]
						},
						"Action": ["sts:AssumeRole"]
					}]
				},
				"Path": "/",
				"Policies": [{
					"PolicyName": "ec2",
					"PolicyDocument": {
						"Version": "2012-10-17",
						"Statement": [{
							"Sid": "Stmt1425023276000",
							"Effect": "Allow",
							"Action": [
								"ec2:AssociateAddress",
								"ec2:ModifyInstanceAttribute",
								"ec2:CreateRoute",
								"ec2:ReplaceRoute"
							],
							"Resource": [
								"*"
							]
						}]
					}
				}]
			}
		},
		"NATLaunchConfiguration": {
			"Type": "AWS::AutoScaling::LaunchConfiguration",
			"Properties": {
				"AssociatePublicIpAddress": true,
				"EbsOptimized": false,
				"IamInstanceProfile": {"Ref": "NATInstanceProfile"},
				"ImageId" : {"Fn::FindInMap": ["RegionMap", {"Ref": "AWS::Region"}, "NATAMI"]},
				"InstanceType": {"Ref": "NATInstanceType"},
				"SecurityGroups": [{"Ref": "NATSecurityGroup"}],
				"UserData": { "Fn::Base64": { "Fn::Join": ["", [
					"#!/bin/bash -ex","\n",
					"export AWS_DEFAULT_REGION=", {"Ref": "AWS::Region"}, "\n",
					"export INSTANCEID=`curl -s http://169.254.169.254/latest/meta-data/instance-id`", "\n",
					"aws ec2 associate-address --instance-id $INSTANCEID --allocation-id ", {"Fn::GetAtt" : ["EIP" , "AllocationId"]}, "\n",
					"aws ec2 modify-instance-attribute --instance-id $INSTANCEID --source-dest-check \"{\\\"Value\\\": false}\"", "\n",
					"aws ec2 replace-route --route-table-id ", {"Ref": "RouteTablePrivate"}, " --destination-cidr-block \"0.0.0.0/0\" --instance-id $INSTANCEID || aws ec2 create-route --route-table-id ", {"Ref": "RouteTablePrivate"}," --destination-cidr-block \"0.0.0.0/0\" --instance-id $INSTANCEID", "\n",
					"/opt/aws/bin/cfn-signal -e 0 --region ", {"Ref": "AWS::Region"}, " --stack ", {"Ref": "AWS::StackName"}, " --resource NATAutoScalingGroup", "\n"
				]]}}
			}
		},
		"NATAutoScalingGroup": {
			"Type": "AWS::AutoScaling::AutoScalingGroup",
			"Properties": {
				"DesiredCapacity": "1",
				"LaunchConfigurationName": { "Ref": "NATLaunchConfiguration" },
				"MaxSize": "1",
				"MinSize": "1",
				"Tags": [{
					"Key": "Name",
					"Value": {"Fn::Join": ["", ["NAT 10.", {"Ref": "ClassB"}, ".0.0/16"]]},
					"PropagateAtLaunch": true
				}],
				"VPCZoneIdentifier": {"Ref": "PublicSubnets"}
			},
			"CreationPolicy": {
				"ResourceSignal": {
					"Count": 1,
					"Timeout": "PT10M"
				}
			}
		}
	},
	"Outputs": {
	}
}
